--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculadora IMC</title>
+
 </head>
 <body>
     
+    <section>
+        <div>
+            <h1>Calculadora IMC</h1>
+            <p>Digite sua altura: <input type="text"></p>
+            <p>Digite seu peso: <input type="text"> </p>
+            <button>CALCULAR</button>
+            <button>LIMPAR</button>
+        </div>
+
+        <div>
+            <p> Seu IMC </p>
+            <div id="resultado"></div>
+        </div>
+    </section>
 </body>
 </html>
